@@ -4,6 +4,9 @@ Change history
 Release Candidate 3
 ===================
 
+- Applied Colin Ramsay's patch fixing MR-232
+  "HtmlHelper.InputButton should create <button> not <input type="button">"
+
 - Fixed MR-228
   "incorrect component configuration results in an 'The container seems to be unavailable 
    in your HttpApplication subclass' exception"
